--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGO_URL=mongodb+srv://pateldeep120404:deep%406001@cluster0.zqzykdf.mongodb.net/whatsapp?retryWrites=true&w=majority&appName=Cluster0
+PORT=5000
